argocd/manifests/gitea/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
spec:
  type: ClusterIP
  selector:
    app: gitea
  ports:
    - name: http
      port: 3000
      targetPort: http
